tests/neg_simple.fo
// A simple negative test

fun int main(int t) = t
